Add tests to factory and adapter